2013-04-30 Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_dashboard_detail.php: Fixed a error
	in a string.
	* operation/incidents/incident_dashboard.php: Created first version
	of incident overview.

2013-04-30 Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_detail.php: Fixed a bug updating
	SLA disabled fiedl.
 	* operation/incidents/incident_dashboard_detail.php: Now sla disable
	widget doesn't shows any information is SLA is disabled.

2013-04-30  Vanessa Gil <vanessa.gil@artica.es>

	* operation/incidents/incident_detail.php: Fixed bug:
	'SLA disabled' and 'Notify changes by email' appears
	disabled.

2013-04-30  Dario Rodriguez <dario@artica.es>

	* godmode/usuarios/configurar_usuarios.php: Fixed and error on 
	a link to user reports.
	* operation/incidents/incident_detail.php,
	operation/incidents/incident_dashboard_detail.php: Implemented 
	incident limit check for hard and soft limits

2013-04-29  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_inventories.php
	  include/ajax/inventories.php
	  include/js/integria_incident_search.js
	  include/styles/integria.css
	  operation/side_menu.php
	  operation/inventories/inventory_detail.php
	  operation/inventories/inventory_search.php: Changed
	inventory search and inventory search popup.

	* operation/incidents/incident_detail.php: No access to
	external user.

2013-04-29  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_tracking.php,
	integria_db.sql,
	include/functions_calendar.php,
	include/functions_incidents.php: Fixed an error calculating
	incident statistics and changing statistics resolution from
	minutes to seconds to get an accurate measure. Also developed
	holidays condition for statistics.

2013-04-26  Dario Rodriguez <dario@artica.es>

	* godmode/setup/incidents_setup.php, 
	* include/functions_config.php,
	* include/functions_calendar.php,
	* integria_db.sql: New feature to add holidays and to show 
	them in workunits calendar.